fixed legends index more info spacing, added anim for generating a team

--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,7 @@ a, a:visited{
   margin: 0 2rem;
   padding: 25px;
   max-width: 336px;
-  min-width: 103px;
+  min-width: 10px;
 }
 
 .centered{
